# hospital-agents-challenge

./: .env.example  .gitignore  CHALLENGE.md  INFRASTRUCTURE_SETUP.md  Makefile  README.md  SETUP.md  main.py  out.txt  pyproject.toml
data/: README.md  mock-data.md
data/processed/: eval_results.json  golden_dataset.jsonl
scripts/: README.md  create_datastore.sh  create_enterprise_engine.py  generate_data.py  generate_golden_dataset.py  run_evaluation.py
src/agents/: README.md
src/agents/doctor/: TODO.md  agent.py  tools.py
src/agents/doctor/.adk/: session.db
src/agents/emergency/: Dockerfile  TODO.md  agent.py  main.py
src/agents/emergency/.adk/: session.db
src/agents/orchestrator/: TODO.md  agent.py
src/agents/orchestrator/.adk/: session.db
src/agents/receptionist/: TODO.md  agent.py  tools.py
src/agents/receptionist/.adk/: session.db
src/agents/researcher/: TODO.md
src/ingestion/: README.md  chunker.py  parser.py  pipeline.py
src/search/: README.md  vertex_client.py
src/shared/: README.md  logger.py  sanitizer.py  validator.py
